bigtop-manager#16:  Introuce spring-aot into bigtop-manager