@@ -1,32 +1,37 @@
 package org.apache.bigtop.manager.common.configuration;
 
-import jakarta.annotation.Resource;
+import lombok.RequiredArgsConstructor;
+import org.apache.bigtop.manager.common.message.serializer.KryoMessageDeserializer;
+import org.apache.bigtop.manager.common.message.serializer.KryoMessageSerializer;
 import org.apache.bigtop.manager.common.message.serializer.MessageDeserializer;
 import org.apache.bigtop.manager.common.message.serializer.MessageSerializer;
 import org.apache.commons.lang3.StringUtils;
+import org.springframework.aot.hint.annotation.RegisterReflectionForBinding;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 
 @Configuration
+@RequiredArgsConstructor
 public class MessageConfiguration {
 
-    @Resource
-    private ApplicationConfiguration applicationConfiguration;
+    private final ApplicationConfiguration applicationConfiguration;
 
     @Bean
+    @RegisterReflectionForBinding({KryoMessageSerializer.class})
     public MessageSerializer messageSerializer() throws Exception {
         String serializerType = applicationConfiguration.getSerializer().getType();
         String packageName = "org.apache.bigtop.manager.common.message.serializer";
         String className = packageName + "." + StringUtils.capitalize(serializerType) + "MessageSerializer";
-        return (MessageSerializer) Class.forName(className).newInstance();
+        return (MessageSerializer) Class.forName(className).getDeclaredConstructor().newInstance();
     }
 
     @Bean
+    @RegisterReflectionForBinding({KryoMessageDeserializer.class})
     public MessageDeserializer messageDeserializer() throws Exception {
         String deserializerType = applicationConfiguration.getSerializer().getType();
         String packageName = "org.apache.bigtop.manager.common.message.serializer";
         String className = packageName + "." + StringUtils.capitalize(deserializerType) + "MessageDeserializer";
-        return (MessageDeserializer) Class.forName(className).newInstance();
+        return (MessageDeserializer) Class.forName(className).getDeclaredConstructor().newInstance();
     }
 }
